About section update

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         <p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SaaS products, and I
           love working with multi- disciplinary teams. I've solved problems for companies ranging from small businesses
           to tech startups, to some of the biggest and most demanding organizations on the planet.</p>
-        <p>I'm currently a Principal Product Designer at <strong><a href="https://okta.com" target="_blank">Okta</a>
-          </strong>, and a Design Lead for the SaaS Identity program. I'm responsible for guiding a team of 18
-          designers and 4 researchers, charting a course to improve the experience for B2B and Enterprise customers
-          throughout our product landscape. Sometimes this means extending existing functionality, and at other
-          times it means creating entirely new features - but the challenges are always complex, technical, and
-          exciting to solve. </p>
+        <p>I'm currently a Principal Product Designer at <strong><a href="https://okta.com"
+              target="_blank">Okta</a></strong>, and Design Lead for the company's SaaS Identity program. I'm
+          responsible for guiding a 26 person team of design and research professionals, charting a course to improve
+          the experience for B2B and Enterprise customers throughout our product landscape. Sometimes this means
+          extending existing functionality, and at other times it means creating entirely new features - but the
+          challenges are always complex, technical, and exciting to solve. </p>
         <a href="#" data-target="js_about" class="button large">Read more about me</a>
         <div class="about_more">
           <p>I originally joined Auth0 in 2021 to lead design efforts for their new initiatives team, called <strong><a
