Fix strong element

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                 href="https://lab.auth0.com/" target="_blank">Auth0 Lab</a></strong>. This team was charged with
             figuring out what was next for the internet, and finding the company's next major product opportunities.
             Building upon that work, when Okta acquired Auth0 I designed the end to end experience for the highly
-            anticipated and award winning authorization products <strong><a href="https://fga.dev/">Okta Fine Grained
-                Authorization</a></strong> and <strong><a href="https://openfga.dev/" target="_blank">OpenFGA</a></
-                strong>.</p>
+            anticipated and award winning authorization products <strong><a href="https://fga.dev/" target="_blank">Okta
+                Fine Grained Authorization</a></strong> and <strong>
+              <a href="https://openfga.dev/" target="_blank">OpenFGA</a></strong>.</p>
           <p>My company's vision is to solve identity and access management for everyone - from individual developers
             and hobby engineers to the most complex and large-scale identity use cases for global enterprises. With our
             extensible and easy-to-integrate platform, Okta's Customer Identity Cloud is already securing billions of
