Update to latest Sass

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
           love working with multi- disciplinary teams. I've solved problems for companies ranging from small businesses
           to tech startups, to some of the biggest and most demanding organizations on the planet.</p>
         <p>I'm currently a Principal Product Designer at <strong><a href="https://okta.com"
-              target="_blank">Okta</a></strong>, and Design Lead for the company's SaaS Identity program. I'm
+              target="_blank">Okta</a></strong>, and Design Lead for the company's B2B SaaS Identity program. I'm
           responsible for guiding a 26 person team of design and research professionals, charting a course to improve
           the experience for B2B and Enterprise customers throughout our product landscape. Sometimes this means
           extending existing functionality, and at other times it means creating entirely new features - but the
-          challenges are always complex, technical, and exciting to solve. </p>
+          challenges are always complex, technical, and exciting to solve.</p>
         <a href="#" data-target="js_about" class="button large">Read more about me</a>
         <div class="about_more">
           <p>I originally joined Auth0 in 2021 to lead design efforts for their new initiatives team, called <strong><a
@@ -137,8 +137,7 @@
       <div class="content">
         <p><strong>For a full portfolio presentation,</strong> including information about my current initiatives at
           Okta, <a href="#contact" class="scrolly">please click here get in touch directly</a>.</p>
-        <p>Below you can view a small selection of past case studies to learn more about my design process:
-        </p>
+        <p>Below you can view a small selection of past case studies to learn more about my design process:</p>
 
         <!-- Section -->
         <section>
@@ -148,8 +147,7 @@
               everyone from the smallest hobby programmer to the largest, most demanding CI/CD operations in the world?
             </p>
             <ul class="keywords">
-              <li>UX Research</def>
-              </li>
+              <li>UX Research</li>
               <li>Performance</li>
               <li>Enterprise CI/CD</li>
               <li>OSS</li>
