Remove Okta, add Mercury

--- a/index.html
+++ b/index.html
@@ -85,16 +85,11 @@
         <blockquote>I'm a product designer, researcher, and facilitator living
           in Halifax, Canada.</blockquote>
         <br>
-        <p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SaaS products, and I
-          love working with multi- disciplinary teams. I've solved problems for companies ranging from small businesses
-          to tech startups, to some of the biggest and most demanding organizations on the planet.</p>
-        <p>I'm currently a Principal Product Designer at <strong><a href="https://okta.com"
-              target="_blank">Okta</a></strong>, and Design Lead for the company's B2B SaaS Identity program. I'm
-          responsible for guiding a 26 person team of design and research professionals, charting a course to improve
-          the experience for B2B and Enterprise customers throughout our product landscape. Sometimes this means
-          extending existing functionality, and at other times it means creating entirely new features - but the
-          challenges are always complex, technical, and exciting to solve.</p>
-        <a href="#" data-target="js_about" class="button large">Read more about me</a>
+        <p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SaaS products, and I love working with multi-disciplinary teams. I've solved problems for companies ranging from small businesses to tech startups, to some of the biggest and most demanding organizations on the planet.</p>
+        <p>I'm currently a Staff Product Designer (PD5) at <strong><a href="https://mercury.com" target="_blank">Mercury</a></strong>, and focus my attention on the company's Risk organization.</p>
+        <p>Using a collaborative approach, I'm designing experiences ranging from internal tools and processes that teams of strategists and investigators employ to prevent money laundering, sanctions offenses, and financial crimes, to the onboarding process, limits, holds, reviews, and other types of Risk friction that our customers experience.</p>
+        <p>Sometimes this means extending existing functionality, and at other times it means creating entirely new features - but the challenges are always complex, technical, and exciting to solve.</p>
+        <!--<a href="#" data-target="js_about" class="button large">Read more about me</a>
         <div class="about_more">
           <p>I originally joined Auth0 in 2021 to lead design efforts for their new initiatives team, called <strong><a
                 href="https://lab.auth0.com/" target="_blank">Auth0 Lab</a></strong>. This team was charged with
@@ -110,7 +105,7 @@
           <p><strong>Within my company and the broader tech industry, I'm also passionate about facilitation practice,
               open source community development, design systems, diversity and inclusion, and accessibility.</strong>
           </p>
-        </div>
+        </div>-->
       </div>
     </section>
 
